# Marquee-board

./: .gitignore  README.md  config.example.yaml  pyproject.toml  run_web.sh
.claude/: launch.json
src/marquee_board/: app.py  config.py  fetcher.py
src/marquee_board/display/: led.py
src/marquee_board/enrichment/: enricher.py  route_resolver.py
src/marquee_board/providers/: calendar.py
src/marquee_board/renderer/: colors.py  engine.py  fonts.py  icons.py  painter.py
src/marquee_flight_tracker/: __main__.py  app.py  config.py  fetcher.py  formatter.py  geo.py  models.py
src/marquee_flight_tracker/display/: base.py  terminal.py  web.py
src/marquee_flight_tracker/enrichment/: aircraft_db.py  airline_db.py  airport_db.py  enricher.py  route_resolver.py
static/: marquee.css  marquee.html  marquee.js
